# lang-trade

./: .env  README.md  config.yaml  pyproject.toml
docs/: manual-review.md  pipeline.md  providers.md  resume-and-rerun.md
docs/schemas/: run_manifest.schema.json  stage_status.schema.json
src/: cli.py  config.py  structured_logging.py  utils.py
src/notebooklm/: __init__.py  base.py  notebooklm_mcp_cli_adapter.py
src/pipeline/: base.py  orchestrator.py  workspace.py
src/rendering/: __init__.py  slides.py  video.py
src/source_acquisition/: base.py  local_media_adapter.py  yt_dlp_adapter.py
src/stages/: __init__.py  pipeline_stages.py
src/transcription/: command_provider.py  whisper_cli.py
src/tts/: __init__.py  command_provider.py  common.py  elevenlabs_provider.py  fish_audio_provider.py  http_utils.py  manual_provider.py
src/yt2slides/: __init__.py  cli.py  config.py  exceptions.py  structured_logging.py  utils.py
src/yt2slides/notebooklm/: base.py  notebooklm_mcp_cli_adapter.py
src/yt2slides/pipeline/: __init__.py  base.py  orchestrator.py  workspace.py
src/yt2slides/rendering/: slides.py  video.py
src/yt2slides/source_acquisition/: __init__.py  local_media_adapter.py  yt_dlp_adapter.py
src/yt2slides/stages/: pipeline_stages.py
src/yt2slides/transcription/: __init__.py  base.py  command_provider.py  whisper_cli.py
src/yt2slides/tts/: __init__.py  base.py  command_provider.py  manual_provider.py
tests/: test_pipeline.py  test_tts_adapters.py
